--- a/AdministradorTareasCreate.html
+++ b/AdministradorTareasCreate.html
@@ -139,8 +139,9 @@
                         <div class="col-6 mb-3">
                             <label for="">Frecuencia*.</label>
                         </div>
-                        <div class="col-6 mb-3">
-                            <input class="form-control" x-model="form.salidas" />
+                        <div class="col-6 mb-3 d-flex align-items-center">
+                            <input class="form-control me-3" x-model="form.frecuencia" />
+                            <span x-text="tipo_salidas[form.frecuencia_rutina_id - 1]">Salidas</span>
                         </div>
                     </div>
                 </div>
@@ -198,16 +199,20 @@
                             </div>
                             <div class="d-flex">
                                 <div class="me-3">
+                                    <template x-if="imgsrc[index]">
+                                        <img role="button" :src="imgsrc[index]" class="image_gasto"
+                                            data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                            @click="preview_image_list(index)" />
+                                        <!-- <img role="button" :src="imgsrc[index]" class="image_gasto" data-bs-toggle="modal"
+                                        :data-bs-target="'#' + index + 'modal'" /> -->
+                                    </template>
+                                </div>
+                                <div class="me-3">
                                     <span class="color-blue fs-11" x-text="i.precio + '€'"></span>
                                 </div>
                                 <div class="me-3">
                                     <button class="btn btn-transparent color-gray-dark"><i
                                             class="fa-solid fa-pen-to-square fa-lg fs-11"></i></button>
-                                </div>
-                                <div class="me-3">
-                                    <button class="btn btn-transparent"
-                                        :class="[i.img_factura ? 'color-gray-light' : 'color-transparent']"><i
-                                            class="fa-solid fa-camera fa-lg fs-11"></i></button>
                                 </div>
                                 <div class="me-3">
                                     <button class="btn btn-transparent color-dark-red" @click="eliminar_gasto(index)"><i
@@ -216,6 +221,7 @@
                             </div>
                         </div>
                         <hr class="my-3">
+
                     </div>
                 </template>
                 <div class="d-flex justify-content-between px-5 py-2 my-3 bg-gray fs-11">
@@ -240,7 +246,7 @@
                             <span> Adjuntar factura </span>
                             <i class="fa-solid fa-camera"></i>
                         </button>
-                        <input type="file" name="" id="img_factura" class="d-none" @change="cargar_archivo($event)">
+                        <input type="file" name="" id="img_factura" class="d-none" @change="cargar_archivo($event)" accept="image/*,.pdf,.doc,.docx">
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
@@ -253,7 +259,7 @@
                         <div>
                             <div class="d-flex justify-content-between my-3">
                                 <div class="d-flex flex-column">
-                                    <span x-text="i.descripcion"></span>
+                                    <span x-text="reducir_descripcion(i.descripcion)"></span>
                                     <span x-text="i.fecha">12:23 2022/10/18</span>
                                 </div>
                                 <div>
@@ -277,6 +283,19 @@
             </div>
         </div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body d-flex justify-content-center">
+                    <template x-if="route_image">
+                        <img :src="route_image" style="width: 100%; height: 100%;" />
+                    </template>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Modal -->
 </div>
 <script>
     function AdministradorTareasCreate() {
@@ -292,9 +311,13 @@
             afectados: [],
             tipo_rutinas: [],
             botes: [],
-            form: { tipo_tarea_id: 1, estado_tarea_id: 1, tipo_afectado_id: 1, tipo_importancia_id: 1, fecha_asignada: '', tipo_afectado_id: 1, tipo_rutina_id: '', frecuencia_rutina_id: '', mensaje: '', bote_id: '', salidas: '', observaciones: [], gastos: [] },
+            archivo: null,
+            tipo_salidas: ['Días', 'Salidas', 'Horas'],
+            form: { tipo_tarea_id: 1, estado_tarea_id: 1, tipo_afectado_id: 1, tipo_importancia_id: 1, fecha_asignada: '', tipo_afectado_id: 1, tipo_rutina_id: '', frecuencia_rutina_id: 1, mensaje: '', bote_id: 1, frecuencia: '', observaciones: [], gastos: [] },
             observacion: { id: '', descripcion: '', fecha: '' },
             gasto: { id: '', nombre: '', medio_pago: '', precio: '', img_factura: '', fecha: '' },
+            imgsrc: [],
+            route_image: '',
             cargar_data() {
                 let url = this.base_url + '/administrador/get_tareas_create'
                 axios.post(url).then(res => {
@@ -332,9 +355,15 @@
                 this.observacion.descripcion = i.descripcion
             },
             agregar_gasto() {
+                if (!this.gasto.nombre || !this.gasto.precio) {
+                    Swal.fire('', 'El campo descripción e importe neto son obligatorios', 'error')
+                    return
+                }
                 let fecha = new Date().toLocaleString()
                 this.gasto.fecha = fecha
                 this.form.gastos.push(this.gasto)
+                console.log('this.gasto ==> ', this.gasto);
+                this.previewFile()
                 this.gasto = { id: '', nombre: '', medio_pago: '', precio: '', img_factura: '', fecha: '' }
             },
             eliminar_gasto(pos) {
@@ -355,11 +384,52 @@
                 console.log('this.gasto.img_factura ==> ', this.gasto.img_factura);
             },
             store() {
+                this.form.gastos.forEach((element, index) => {
+                    this.form.gastos[index].img_factura = this.imgsrc[index]
+                });
                 let url = this.base_url + '/administrador/store_tareas'
                 axios.post(url, this.form).then(res => {
-                    console.log('res.data ==> ', res.data);
+                    Swal.fire('Éxito', res.data.msg, 'success')
+                }).catch(errors => {
+                    var error = Object.values(errors.response.data.errors)[0][0];
+                    Swal.fire('Error', error, 'error')
                 })
-            }
+            },
+            previewFile() {
+                let file = this.gasto.img_factura;
+                if (!file || file.type.indexOf('image/') === -1) return;
+                this.imgsrc[this.form.gastos.length - 1] = null;
+                let reader = new FileReader();
+
+                reader.onload = e => {
+                    this.imgsrc[this.form.gastos.length - 1] = e.target.result;
+                    // this.imgsrc = e.target.result;
+                }
+
+                reader.readAsDataURL(file);
+
+            },
+            reducir_descripcion(cadena) {
+                if (cadena.length > 35) {
+                    return cadena.substr(0, 34) + '...'
+                } else {
+                    return cadena
+                }
+            },
+            preview_image_list(index) {
+                this.route_image = this.imgsrc[index]
+                console.log('this.route_image ==> ', this.route_image);
+            },
+            encode64(obj) {
+                if (obj)
+                    return Base64.encode(obj)
+            },
         }
     }
 </script>
+<style>
+    .image_gasto {
+        width: 71px;
+        height: 71px;
+    }
+</style>
