--- a/AdministradorTareasCreate.html
+++ b/AdministradorTareasCreate.html
@@ -162,7 +162,8 @@
             <div class="row">
                 <div class="col-12 mb-3">
                     <div class="d-flex">
-                        <label class="form-check-label me-2 lang" key="show_task_warning" for="check-advertencia"> Mostrar advertencia de tarea
+                        <label class="form-check-label me-2 lang" key="show_task_warning" for="check-advertencia">
+                            Mostrar advertencia de tarea
                         </label>
                         <input class="form-check-input" type="checkbox" value="" id="check-advertencia">
                     </div>
@@ -197,7 +198,8 @@
         <div class="col-lg-6 px-3">
             <div class="container-fluid">
                 <div class="mb-3">
-                    <h5 style="text-transform: capitalize"> <strong class="color-dark-extras lang" key="expenses"> Gastos </strong> </h5>
+                    <h5 style="text-transform: capitalize"> <strong class="color-dark-extras lang" key="expenses">
+                            Gastos </strong> </h5>
                 </div>
                 <template x-for="(i,index) in form.gastos" :key="index">
                     <div>
@@ -244,8 +246,8 @@
                     <strong class="color-dark-extras"> <b x-text="sum_gastos()"></b> </strong>
                 </div>
                 <div class="mb-3">
-                    <input class="form-control lang" type="text" placeholder="Descripción nuevo gasto*" key="description_new_expense"
-                        x-model="gasto.nombre">
+                    <input class="form-control lang" type="text" placeholder="Descripción nuevo gasto*"
+                        key="description_new_expense" x-model="gasto.nombre">
                 </div>
                 <div class="row">
                     <div class="col-md-5 mb-3">
@@ -254,7 +256,8 @@
                         </select>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <input class="form-control lang" type="text" placeholder="Import Neto €*" x-model="gasto.precio" key="net_amount">
+                        <input class="form-control lang" type="text" placeholder="Import Neto €*" x-model="gasto.precio"
+                            key="net_amount">
                     </div>
                     <div class="col-md-4 mb-3">
                         <button class="btn-tareas f-9" @click="img_factura()">
@@ -271,11 +274,13 @@
                 </div>
                 <div class="d-flex justify-content-end">
                     <button class="btn-tareas" @click="agregar_gasto()">
-                        <strong class="lang" :lang="is_edit_gasto == false ? 'Add New Expense' : 'Edit Expense'"> </strong>
+                        <strong class="lang" :lang="is_edit_gasto == false ? 'Add New Expense' : 'Edit Expense'">
+                        </strong>
                     </button>
                 </div>
                 <div>
-                    <h5 class="color-dark-extras"> <strong class="lang" key="observations"> Observaciones </strong> </h5>
+                    <h5 class="color-dark-extras"> <strong class="lang" key="observations"> Observaciones </strong>
+                    </h5>
                     <template x-for="(i,index) in form.observaciones">
                         <template x-if="!i.deleted_at">
                             <div>
@@ -302,7 +307,8 @@
                     <div class="d-flex justify-content-end" @click="agregar_observacion()">
                         <button class="btn-tareas f-9">
                             <!-- <strong class="lang" :lang="is_edit_gasto == false ? 'Add New Expense' : 'Edit Expense'"> </strong> -->
-                            <strong class="lang" :lang="is_edit == false ? 'Add Observation' : 'Edit Observation'"></strong> 
+                            <strong class="lang"
+                                :lang="is_edit == false ? 'Add Observation' : 'Edit Observation'"></strong>
                         </button>
                     </div>
                 </div>
